// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toolbar /> renders correctly 1`] = `
<div
  className="nz-toolbar-toolbar nz-direction-left nz-vertical"
>
  <div
    className="nz-expanded nz-history"
  />
  <div
    className="nz-expanded nz-panels"
  />
  <Items
    className="nz-items"
    direction={0}
  />
</div>
`;

exports[`<Toolbar /> renders vertical with expands to direction 1`] = `
<div
  className="nz-toolbar-toolbar nz-direction-right nz-vertical"
>
  <div
    className="nz-expanded nz-history"
  />
  <div
    className="nz-expanded nz-panels"
  />
  <Items
    className="nz-items"
    direction={0}
  />
</div>
`;
